# indic-uid

./: .gitignore  LICENSE  README.md  app.py  character_sets.py  pyproject.toml  validators.py
indic_uid/: __init__.py  character_sets.py  generator.py  utils.py  validators.py
tests/: test_generator.py  test_utils.py  test_validators.py
